--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,3 +18,6 @@ project(':react-native-localization').projectDir = new File(rootProject.projectD
 
 include ':react-native-restart'
 project(':react-native-restart').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-restart/android')
+
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
