--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "conventionalCommits.scopes": ["UI", "theme"],
+  "conventionalCommits.scopes": ["UI", "theme", "Config"],
   "java.configuration.updateBuildConfiguration": "automatic"
 }
