--- a/package.json
+++ b/package.json
@@ -11,7 +11,57 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "@eva-design/eva": "^2.2.0",
+    "@gorhom/bottom-sheet": "^4.4.7",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/geolocation": "^3.0.6",
+    "@react-native-community/netinfo": "^9.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@ui-kitten/components": "^5.3.1",
+    "@ui-kitten/eva-icons": "^5.3.1",
+    "ahooks": "^3.7.8",
+    "axios": "^1.4.0",
+    "color": "^4.2.3",
+    "deepmerge": "^4.3.1",
+    "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^6.2.0",
+    "moment": "^2.29.4",
+    "re": "^0.1.4",
+    "react-native-animatable": "^1.3.3",
+    "react-native-date-picker": "^4.2.14",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-eventemitter": "^0.0.1",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.2",
+    "react-native-localization": "^2.3.2",
+    "react-native-magnus": "^1.0.62",
+    "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-otp": "^1.0.0",
+    "react-native-reanimated": "^3.4.2",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-snackbar": "^2.6.2",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.13.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.2",
+    "reselect": "^4.1.8",
+    "socket.io-client": "^4.7.2",
+    "type-fest": "^4.2.0",
+    "validate-color": "^2.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
